# server/routes/content/content.go
@@ -49,15 +49,15 @@ func createContent(c *fiber.Ctx) error {
 	return c.Status(fiber.StatusCreated).JSON(content)
 }
 
-// ListAccounts godoc
-// @Summary      List accounts
-// @Description  get accounts
-// @Tags         accounts
+// Content godoc
+// @Summary      Update content
+// @Description  update content
+// @Tags         content
 // @Accept       json
 // @Produce      json
-// @Param        q    query     string  false  "name search by q"  Format(email)
+// @Param request body content.Content true "query params"
 // @Success      200  {object}   content.Content
-// @Router       /accounts [get]
+// @Router       /content [put]
 func updateContent(c *fiber.Ctx) error {
 	content := new(Content)
 	id := c.Params("id")
